--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require-dev": {
         "illuminate/database": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~8.5|^9.5.10"
+        "phpunit/phpunit": "~8.5|^9.5.10|^10.5"
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +40,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "6.x-dev"
+            "dev-master": "11.x-dev"
         },
         "laravel": {
             "providers": [
@@ -53,6 +53,5 @@
         }
     },
     "minimum-stability": "dev",
-    "abandoned": "spatie/laravel-html",
     "prefer-stable": true
 }
